# BASIL

./: .gitignore  LICENSE  README.md  build.py  compile.sh  pyproject.toml
.github/workflows/: build-release.yml
app/: app.py  main_application.py
app/bayesopt/: baybe_service.py  objective.py  surrogate.py
app/bayesopt/kernels/: k1.py
app/core/: about.py
app/models/: campaign.py  enums.py
app/models/parameters/: types.py
app/screens/campaign/: campaign_wizard.py
app/screens/campaign/panel/: campaign_panel.py  explanations_panel.py  parameters_panel.py  runs_panel.py  settings_panel.py  visualizations_panel.py
app/screens/campaign/panel/services/: experiments_table.py  generation_progress.py  log_viewer.py  runs_data_manager.py  runs_list.py
app/screens/campaign/setup/: campaign_info_step.py  data_import_step.py
app/screens/campaign/setup/components/: csv_data_importer.py  data_import_widgets.py
app/screens/workspace/: select_workspace.py
app/shared/components/: splash_screen.py
app/shared/styles/: theme.py
app/shared/utils/: export_campaign.py
assets/icons/: icon.icns
docs/: demo.ipynb
tests/: test_smoke.py
tests/models/parameters/: test_parameters.py
tests/screens/campaign/: test_campaign_wizard.py
tests/screens/campaign/panel/: test_campaign_panel.py  test_explanations_panel.py  test_parameters_panel.py  test_runs_panel.py  test_settings_panel.py  test_visualizations_panel.py
tests/screens/campaign/panel/services/: test_experiments_table.py  test_generation_progress.py  test_log_viewer.py  test_runs_data_manager.py  test_runs_list.py
tests/screens/campaign/setup/: test_campaign_info_step.py
tests/screens/workspace/: test_select_workspace.py
tests/shared/utils/: test_export_campaign.py
