[project]
name = "basil"
version = "0.0.1"
description = "A graphical interface for experimental and process optimization"
authors = [
 { name = "Kelvin Paschal", email = "kelvinidanwekhai@gmail.com" },
 { name = "Val Kaneva", email = "lerakaneva@gmail.com" }
]
readme = "README.md"
repository = "https://github.com/molecularmodelinglab/BASIL"
license = "Apache-2.0"
classifiers = [
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.11",
"License :: OSI Approved :: Apache Software License",
"Operating System :: OS Independent",
"Development Status :: 3 - Alpha",
"Intended Audience :: Science/Research",
"Topic :: Scientific/Engineering",
"Topic :: Software Development :: User Interfaces",
]
requires-python = ">=3.11,<3.14"
dependencies = [
"PySide6>=6.5,<7.0",
"baybe (>=0.14.0,<0.15.0)",
"scikit-fingerprints",
"torch==2.2.2; platform_system == 'Darwin' and platform_machine == 'x86_64'",
"numpy==1.26.*; platform_system == 'Darwin' and platform_machine == 'x86_64'",
]

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
mypy = "*"
poetry = "*"
ruff = "*"
pytest = "*"
pytest-cov = "*"
pytest-qt = "*"
pyinstaller = "*"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
"E", # pycodestyle errors
"W", # pycodestyle warnings
"F", # pyflakes
"I", # isort
"N806", # variable names should be lowercase
"N815", # variable names in class scope should be lowercase
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["basil"]
